k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: javi
  labels:
    app.kubernetes.io/name: javi
