k8s/spark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark
  namespace: javi
  labels:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: javi
      app.kubernetes.io/component: spark
  template:
    metadata:
      labels:
        app.kubernetes.io/name: javi
        app.kubernetes.io/component: spark
    spec:
      serviceAccountName: spark
      containers:
        - name: spark
          image: javi-spark:local
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: spark-output
              mountPath: /app/output
          resources:
            requests:
              cpu: 250m
              memory: 3Gi
            limits:
              cpu: 2000m
              memory: 12Gi
      volumes:
        - name: spark-output
          persistentVolumeClaim:
            claimName: spark-output
