k8s/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: javi
  labels:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: javi
      app.kubernetes.io/component: kafka-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: javi
        app.kubernetes.io/component: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: redpandadata/console:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: javi
  labels:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: kafka-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: kafka-ui
  ports:
    - name: http
      port: 8081
      targetPort: http
