k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: javi
  labels:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: javi
      app.kubernetes.io/component: kafka
  template:
    metadata:
      labels:
        app.kubernetes.io/name: javi
        app.kubernetes.io/component: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.0
          ports:
            - name: broker
              containerPort: 9092
            - name: controller
              containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: javi
  labels:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: kafka
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: kafka
  ports:
    - name: broker
      port: 9092
      targetPort: broker
