k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: javi
  labels:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: javi
      app.kubernetes.io/component: mongo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: javi
        app.kubernetes.io/component: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: javi
  labels:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: mongo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: javi
    app.kubernetes.io/component: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: mongo
